# legal-rag-assistant

./: .gitignore  README.md  app.py  pyproject.toml  rag_pipeline.py  rag_pipeline_bkp.py  requirements.txt
templates/: index.html
